<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.RegistrationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp40"
            android:layout_marginRight="@dimen/dp40"
            android:layout_gravity="center"
            android:background="@color/silver"
            android:gravity="center">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="center"
                android:background="@mipmap/ic_launcher"/>

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp12"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_usernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:textColorHint="#c1c2c4"
                    android:textColor="@color/redkuat"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/masked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_nameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:textColor="@color/redkuat"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:textColorHint="#c1c2c4"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textColor="@color/redkuat"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:textColorHint="#c1c2c4"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textColor="@color/redkuat"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:textColorHint="#c1c2c4"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/masked2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_noHpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="no hp"
                    android:textColor="@color/redkuat"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:textColorHint="#c1c2c4"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnCreateAccount"
                    android:layout_marginTop="@dimen/dp12"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/redkuat"
                    android:text="@string/createaccount"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
