<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/dp30"
        android:paddingLeft="@dimen/dp30"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/dp30"
            android:paddingLeft="@dimen/dp30"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:src="@mipmap/ic_launcher"
                android:layout_width="@dimen/dp140"
                android:layout_height="@dimen/dp100"
                android:layout_marginTop="@dimen/margin_top_1"
                android:layout_gravity="center"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/roundd"
                android:padding="8dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/usernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:shadowColor="@color/redkuat"
                    android:textColorHighlight="@color/redkuat"
                    android:textColorLink="@color/redkuat"
                    android:textColor="@color/redkuat"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:textColorHint="#c1c2c4"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="@dimen/margin_top"
                    style="@style/AlertDialog.AppCompat"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/masked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundd"
                android:padding="8dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:shadowColor="@color/redkuat"
                    android:textColorHighlight="@color/redkuat"
                    android:textColorLink="@color/redkuat"
                    android:textColor="@color/redkuat"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:textColorHint="#c1c2c4"
                    style="@style/AlertDialog.AppCompat"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/margin_top"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/redkuat"
                    android:text="@string/login"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linlay_bottom"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:text="@string/donthaveaccount"
                        android:textSize="@dimen/sp16"
                        />

                    <Button
                        android:id="@+id/btnSignUp"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_weight="1"
                        android:text="@string/signup"
                        android:textColor="@color/redkuat"/>

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_above="@id/linlay_bottom"
                    android:background="@color/abubayangan" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
